[tool.poetry]
name = "sherlock"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pygmo = "^2.19.5"
pymc = "^5.10.2"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
GPy = { git = "https://github.com/SheffieldML/GPy.git", branch = "devel" }
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
theano = "^1.0.5"
tensorflow = "2.14.0"
tensorflow-probability = "^0.23.0"
gpflow = "^2.9.0"
dcor = "^0.6"
joblib = "^1.3.2"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
